MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = 

noinst_LTLIBRARIES = librofrstp.la

librofrstp_la_SOURCES = \
	crstp.h \
	cbridgeid.hpp \
	cportid.hpp \
	crpcost.hpp \
	cstpv.hpp

librofrstp_la_LIBADD=

library_includedir=$(includedir)/rofl/common
library_include_HEADERS= 

AM_CPPFLAGS=-fPIC
AM_LDFLAGS=

